# kamae

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  diff.txt  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-publish.yaml  cd-release.yaml  ci.yaml  publish.yaml  release.yaml
achieving_shape_parity/: index.html
achieving_type_parity/: index.html
adding_transformer/: index.html
chaining_models/: index.html
docs/: achieving_shape_parity.md  achieving_type_parity.md  adding_transformer.md  chaining_models.md  codegen.md  gen_ref_pages.py  keras3_migration.md  migration-v3.md  testing_inference.md  v3_migration.md
docs/hooks/: copy_readme.py  link_replace.py
examples/inference/: tf_serving_request.py
examples/sklearn/: example_pipeline.py  example_simple_keras_tuner_pipeline.py
examples/spark/: example_array_transform.py  example_cosine_sim_pipeline.py  example_date_diff_transform.py  example_date_parse_pipeline.py  example_hash_indexer_keras_tuner_pipeline.py  example_haversine_distance_pipeline.py  example_if_statements_pipeline.py  example_imputation.py  example_list_segment_stats.py  example_listwise_stats.py  example_logical_operations_pipeline.py  example_oh_encoder_pipeline.py  example_pipeline.py  example_pipeline_lambda_fn.py  example_pipeline_strings.py  example_pipeline_with_nulls.py  example_round_mod_pipeline.py  example_simple_jax_pipeline.py  example_simple_keras_tuner_pipeline.py  example_string_list_to_list_pipeline.py  example_string_pipeline.py  example_string_replace_pipeline.py
extra/: LICENSE_HEADER.txt
reference/: SUMMARY.txt
reference/src/kamae/: index.html
search/: search_index.json
src/kamae/: __init__.py  discovery.py
src/kamae/graph/: pipeline_graph.py
src/kamae/keras/: __init__.py
src/kamae/params/: __init__.py  naming.py  param_spec.py  shared_specs.py
src/kamae/utils/: dtype_enum.py
testing_inference/: index.html
tests/kamae/: test_kamae.py  test_param_alignment.py
tests/kamae/graph/: test_pipeline_graph.py
tests/kamae/keras/: test_codegen.py  test_jit_compatibility.py  test_layer_serialisation.py
tests/kamae/sklearn/: conftest.py
v3_migration/: index.html
(+726 files in other folders)
